k8s/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: acrkafkaplatformdev.azurecr.io/order-producer:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: producer
  namespace: orders
spec:
  selector:
    app: producer
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
